[project]
dependencies = []
requires-python = ">=3.8"

[tool.pdm.dev-dependencies]
dev = [
    "-e bentoml-core @ file:///${PROJECT_ROOT}/core",
    "-e bentoml @ file:///${PROJECT_ROOT}/bentoml",
]
bentoml-aws = ["fs-s3fs"]
bentoml-io = [
    "filetype",
    "pydantic<2",
    "Pillow",
    "pandas>=1",
    "pyarrow",
]
bentoml-io-file = ["filetype"] # Currently use for from_sample
bentoml-io-json = ["pydantic<2"] # currently we don't have support for pydantic 2.0
bentoml-io-image = ["filetype", "Pillow"]
bentoml-io-pandas = ["pandas>=1", "pyarrow"]
bentoml-triton = ["tritonclient[all]>=2.29.0"]
bentoml-grpc = [
    "protobuf",
    "grpcio",
    "grpcio-health-checking",
    "opentelemetry-instrumentation-grpc==0.39b0",
]
bentoml-grpc-reflection = ["grpcio-reflection"]
bentoml-grpc-channelz = ["grpcio-channelz"]
bentoml-tracing-jaeger = ["opentelemetry-exporter-jaeger==1.18.0"]
bentoml-tracing-zipkin = ["opentelemetry-exporter-zipkin==1.18.0"]
bentoml-tracing-otlp = ["opentelemetry-exporter-otlp==1.18.0"]
bentoml-monitor-otlp = ["opentelemetry-exporter-otlp-proto-http==1.18.0"]
bentoml-docs = [
    "sphinx>=5",
    "myst-parser",
    "sphinx-click>=3.0.2",
    "furo",
    "sphinx-inline-tabs",
    "sphinxext-opengraph",
    "sphinxcontrib-fulltoc",
    "sphinxcontrib-spelling",
    "sphinx-copybutton",
    "sphinx-issues",
    "sphinx-design",
    "pyenchant",
    "Jinja2>=3.1",
    "sphinx-autobuild",
    "sphinx-hoverxref",
    "pyspark",
    "ray[serve]",
]
bentoml-frameworks = [
    "catboost",
    "lightgbm",
    "mlflow",
    "fastai",
    "xgboost",
    "scikit-learn",
    "easyocr",
    "datasets",
    # ONNX dependencies
    "onnx",
    "onnxruntime",
    "skl2onnx",
    # tensorflow dependencies
    "tensorflow",
    # torch-related dependencies
    "torch",
    "lightning",
    # huggingface dependencies
    "transformers",
    "tokenizer",
    "diffusers",
    "flax; platform_system!='Windows'",
    "jax; platform_system!='Windows'",
    "jaxlib; platform_system!='Windows'",
    "chex; platform_system!='Windows'",
]
bentoml-tooling = ["pre-commit", "setuptools-scm", "pandas-stubs"]
bentoml-testing = [
    "pandas>=1",
    "pydantic<2",
    "scikit-learn",
    "yamllint==1.32.0",
    "coverage[toml]==7.2.6",
    "lxml",
    "orjson",
    "pytest-cov==4.1.0",
    "pytest==7.4.0",
    "pytest-xdist[psutil]==3.3.1",
    "pytest-asyncio==0.21.1",
    "build[virtualenv]==0.10.0",
    "Pillow<10",
]

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/cpu"
name = "torch"

[tool.pdm.resolution]
respect-source-order = true

[tool.pdm.resolution.overrides]
fastapi = "==0.93.0"
tensorflow = ">=2.3.0"
tensorflow-io-gcs-filesystem = "==0.31.0"
